# vyatsu

./: LICENSE  README.md
1 курс/Инженерная графика/: Шаблон А3 ИВТ, ПИ.dwt  план развития кафедры инженерной физики 2017.ppt
2 курс/Компьютерная графика/: Metodichka_novaya.docx
2 курс/Курсовой - 3 семестр/: Задание.docx  Презентация.pptx
2 курс/Курсовой - 4 семестр/: ex.txt  Задание.doc  Операционный автомат.docx  ПЗ.docx  Презентация.pptx  СА.docx
2 курс/Электоротехника и электроника/: Контрольная работа №2.docx
3 курс/Базы данных/: lab_airport.sql
3 курс/Курсовой - 5 семестр/: Задание.docx  ПЗ.docx  Презентация.pptx
3 курс/Курсовой - 6 семестр/: README.md  Задание.docx  ПЗ.docx  Презентация.pptx
3 курс/Параллельное программирование/: Тесты.docx
3 курс/Проектирование цифровых устройств/: combined ugo.docx  sub ugo.docx  ugo.docx  Отчет.docx  СА вычитание модулей.docx  фикс.docx
4 курс/Диплом/: README.md  Задание.docx  Плюсы минусы.txt  СТО ТПЖА 01.001-2024  V1.1.docx  печать+ конвертация.txt
4 курс/Курсовой - 7 семестр/: Задание.docx  ПЗ.docx  Презентация.pptx
4 курс/Курсовой - 8 семестр/: README.md  Задание.docx  ПЗ.docx  Презентация.pptx  Схемы.drawio
BallsGame/: game.pas  main.pas  project1.lps
BallsGame/src/: project1.lpi
RPS Starter/: bot1.pas  starter.pas
SnakeGame/: README.md
SnakeGame/src/: CMakeLists.txt  snake.h
Базы данных/: README.md  lab_airport.sql
Базы данных/python/: README.md  app.py
Базы данных/qt_cpp/: README.md  flightscbmodel.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+3 more)
Сonveyor/: README.md
(+1557 files in other folders)
